--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.vcxproj
+*.vcxproj.filters
+*.dll
+*.out
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
